log
Wed 08 May 2024 02:32:28 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ae09d12
Wed 08 May 2024 02:41:17 AM UTC: 
 treemap.c | 31 ++++++++++++++++++++++++++-----
 1 file changed, 26 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
a37a9fd
Wed 08 May 2024 02:42:09 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
9c2dc7b
Wed 08 May 2024 02:42:38 AM UTC: 
 treemap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  4|7
total_score: 5/70
44863dd
Wed 08 May 2024 02:44:26 AM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|7
total_score: 5/70
435eb43
Wed 08 May 2024 02:46:33 AM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  3|7
total_score: 5/70
af09717
Wed 08 May 2024 11:56:00 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  4|7
total_score: 5/70
50e6d36
Wed 08 May 2024 11:57:38 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
c6f577b
Wed 08 May 2024 11:59:26 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
634682c
Wed 08 May 2024 12:04:33 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:134:15: error: unused variable ‘ub’ [-Werror=unused-variable]
  134 |     TreeNode *ub = NULL;
      |               ^~
treemap.c:133:15: error: unused variable ‘current’ [-Werror=unused-variable]
  133 |     TreeNode *current = tree->root;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a4a0c58
Wed 08 May 2024 12:04:54 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|5
total_score: 10/70
b44cb56
Wed 08 May 2024 02:15:43 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  12|4
total_score: 20/70
5053874
Wed 08 May 2024 02:44:08 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:190:1: error: control reaches end of non-void function [-Werror=return-type]
  190 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8d3ca2e
Wed 08 May 2024 02:44:56 PM UTC: 
 treemap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  12|4
total_score: 20/70
311f03f
Wed 08 May 2024 02:46:23 PM UTC: 
 treemap.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
 tests:  18|3
total_score: 30/70
215c776
Wed 08 May 2024 02:49:48 PM UTC: 
 treemap.c | 35 ++++-------------------------------
 1 file changed, 4 insertions(+), 31 deletions(-)
 tests:  19|3
total_score: 30/70
5f6d280
Wed 08 May 2024 02:53:19 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  20|3
total_score: 30/70
04736fd
Wed 08 May 2024 02:56:13 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  21|2
total_score: 40/70
c6831ef
Wed 08 May 2024 03:00:04 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  21|2
total_score: 40/70
56de278
